# getDeps

./: .gitignore  CMakeLists.txt  README.md  console.cpp  deps.js  example-fedora.js  example.js  getDeps.pro  ignoryLib.json  main.cpp
Console/: CMakeLists.txt  Console.cpp  Console.h  Console.pri
